--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Mellanie</string>
+    <string name="facebook_app_id">1640815089540380</string>
 </resources>
